--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
           <div class="col">
             <div class="input-field" id="expiration-field">
               <label for="expiration">Expiration</label>
-              <input id="expiration" type="text" placeholder="MM/YY" >
+              <input id="expiration" type="text" placeholder="MM/YY" pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$" title="Please Use MM/YY Format"> 
             </div>
           </div>
         </div>
